live-demo/app1-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
    name: app1-svc
spec:
    selector:
        app: app
        version: v1
    type: ClusterIP
    ports:
        - port: 80
          targetPort: 3000
    
---
apiVersion: apps/v1
kind: Deployment
metadata:
    name: app1-deployment
    labels:
        app: app
        version: v1
spec:
    replicas: 1
    selector:
        matchLabels:
            app: app
            version: v1
    template:
        metadata:
            labels:
                app: app
                version: v1
        spec:
            containers:
            - image: stackupiss/northwind-app:v1
              name: app1
              imagePullPolicy: Always
              ports:
              - containerPort: 3000
